# crypto

./: Cargo.toml  README.rst
.cargo/: config.toml
examples/: aes.rs  chacha20_poly1305.rs
scripts/: openssl_bench.py
src/: aead.rs  camellia.rs  chacha20.rs  chacha20_poly1305.rs  cipher.rs  error.rs  hash.rs  hkdf.rs  hmac.rs  lib.rs  md2.rs  md4.rs  md5.rs  poly1305.rs  rc2.rs  rc4.rs  scrypt.rs  sha1.rs  shani.rs  sm3.rs  sm4.rs
src/aeadcipher/: chacha20_poly1305.rs  mod.rs
src/aeadcipher/chacha20_poly1305/: mod.rs  poly1305.rs
src/aes/: aesni_aarch64.rs  aesni_x86.rs  generic.rs  mod.rs
src/blockcipher/: aria.rs  camellia.rs  mod.rs  rc2.rs  sm4.rs
src/blockcipher/aes/: aarch64.rs  aesni_aarch64.rs  aesni_x86.rs  generic.rs  mod.rs  x86.rs
src/blockcipher/sm4/: generic.rs
src/blockmode/: cbc.rs  ccm.rs  cfb.rs  ctr.rs  ecb.rs  gcm.rs  gcm_siv.rs  gcm_x86.rs  mod.rs  ocb.rs  ofb.rs  siv.rs  xts.rs
src/blockmode/gcm/: ghash.rs  ghash_aarch64.rs  ghash_generic.rs  ghash_x86.rs  mod.rs
src/blockmode/gcm_siv/: mod.rs  polyval.rs  polyval_generic.rs
src/hash/: md2.rs  md4.rs  md5.rs  mod.rs  sha1.rs  sm3.rs
src/hash/sha2/: mod.rs  sha256.rs  sha512.rs  shani.rs
src/hash/sha2/sha256/: mod.rs  x86.rs
src/hash/sha2/sha512/: mod.rs
src/hash/sha3/: mod.rs
src/kdf/: hkdf.rs
src/mac/: hmac.rs  mod.rs  poly1305.rs
src/mac/ghash/: aarch64.rs  generic.rs  mod.rs  x86.rs
src/mac/polyval/: aarch64.rs  generic.rs  mod.rs  x86.rs
src/mem/: mod.rs
src/openssh/: mod.rs
src/openssh/chacha20_poly1305/: chacha20.rs  mod.rs
src/sha2/: mod.rs  sha256.rs  sha512.rs  shani.rs
src/sha3/: mod.rs
src/shadowsocks/: mod.rs  rc4_md5.rs  table.rs
src/streamcipher/: chacha20.rs  mod.rs  rc4.rs  zuc.rs
src/streamcipher/chacha20/: chacha20_poly1305.rs  mod.rs
src/util/: and.rs  mod.rs  xor.rs
