[package]
name = "crypto"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle      = { version = "2.3", default-features = false }
byteorder   = { version = "1.3", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = [
    "subtle/i128",
]
std     = [
    "subtle/std",
    "byteorder/std",
]
nightly = [
    "subtle/nightly",
]


[package.metadata.docs.rs]
all-features = true
# rustdoc-args = ["--cfg", "docsrs"]

# https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]
opt-level = 3               # Use slightly better optimizations.
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
rpath = false